--- a/test_frontend_light/index.html
+++ b/test_frontend_light/index.html
@@ -8,20 +8,22 @@
 		<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
 		<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 		<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+		<script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
 		<!-- Adds JSX and ES6. -->
 		<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-		<!-- The script containing all the React components. -->
-		<script type="text/babel" src="elements.js"></script>
+		<!-- The scripts containing all the React components. -->
+		<!--<script type="text/babel" src="header.js"></script>-->
+		<script type="text/babel" src="blocks.js"></script>
 		
+		<!-- The CSS file. -->
 		<link href="index.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-
-		<h2>Code Mash: Cat Comparison Edition</h2>
+		<!--<div id="header"></div>-->
+		<div class="headerClass"> <h1> Code Mash </h1> </div>
 
 		<!-- We will put our React component inside this div. -->
 		<div id="code_block"></div>
-
 	</body>
 </html>
