Added more pages, a nice font, and "custom" block message
"Custom" as in it shows the text of the block you clicked.

--- a/test_frontend_light/register.html
+++ b/test_frontend_light/register.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>Code Mash</title>
+		<title>Code Mash - Registration</title>
 		
 		<!-- Load React. -->
 		<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -22,18 +22,16 @@
 		
 		<!-- The CSS files. -->
 		<link href="index.css" rel="stylesheet" type="text/css">
-		<link href="blocksPage.css" rel="stylesheet" type="text/css">
+		<link href="register.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!--<div id="header"></div>-->
 		<div class="headerWrapper">
 			<div class="headerClass">
 				<h1> Code Mash </h1>
-				<a href="signIn.html"> Sign In </a>
 			</div>
 		</div>
 
-		<!-- We will put our React component inside this div. -->
-		<div id="code_block"></div>
+		
 	</body>
 </html>
