--- a/test_frontend_light/blocks.html
+++ b/test_frontend_light/blocks.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Code Mash</title>
-		
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
+
+		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>-->
+		<!--<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>-->
 		
 		<!-- Load React. -->
 		<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -21,7 +22,6 @@
 		<link href="prism/prism.css" rel="stylesheet" type="text/css">-->
 
 		<!-- The scripts containing all the React components. -->
-		<!--<script type="text/babel" src="header.js"></script>-->
 		<script type="text/babel" src="blocks.js"></script>
 		
 		<!-- The nice font. -->
@@ -43,5 +43,7 @@
 
 		<!-- We will put our React component inside this div. -->
 		<div id="code_block"></div>
+		
+		<pre><code class="prettyprint">if (true)</code></pre>
 	</body>
 </html>
